# az-jina

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: AUTH_CONTRACT.md  PARITY.md
infra/terraform/modules/aca/app/: main.tf  variables.tf
infra/terraform/modules/aca/reader-app/: .terraform.lock.hcl
infra/terraform/stacks/00-bootstrap/: .terraform.lock.hcl  terraform.tfvars.dev.example
infra/terraform/stacks/20-workload/: main.tf  terraform.tfvars.dev.example  variables.tf
infra/terraform/stacks/21-workload-mcp/: .terraform.lock.hcl  main.tf  terraform.tfvars.dev.example  variables.tf
infra/terraform/stacks/23-workload-auth/: main.tf  terraform.tfvars.dev.example  variables.tf
notes/: decisions.md  run_and_log.sh
notes/features/: F01.md  F02.md  F03.md  F04.md  F05.md  F06.md  F07.md
notes/subagents/: sa_auth_contract.md  sa_docker_and_runtime.md  sa_infra_ops_wiring.md  sa_thinapps_shared_reverse_engineer.md
ops/: pyproject.toml
ops/ops/: __init__.py  _deploy_common.py  build_and_push.py  build_and_push_mcp.py  build_and_push_reader.py  deploy_workload.py  deploy_workload_reader.py  keys.py  manage_tokens.py
scripts/: guardrails.sh  submodule_branch_check.sh  test_auth_contract.sh
services/auth/: Dockerfile  pyproject.toml
services/auth/auth_service/: __main__.py  app.py  auth.py  config.py  logging.py  models.py  state.py  vault.py
